Added .gitignore file to ignore unnecessary files and db string

--- a/DbOperationsWithEFCore/appsettings.json
+++ b/DbOperationsWithEFCore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "myConString": "server=INL437;Initial Catalog=Basant;uid=sa;password=Welcome12345; MultipleActiveResultSets=True ;"
+  }
 }
